--- a/confirm.html
+++ b/confirm.html
@@ -18,8 +18,6 @@
     <main class="container">
         <div class="confirm-box glass">
             <h2 id="coinName">Loading...</h2>
-            <p class="rate">Market Price: <span id="marketRate">$0.00</span> USD</p >
-
             <div class="qty-section">
                 <h3>Select Quantity</h3>
                 <div class="qty">
@@ -28,11 +26,9 @@
                     <button class="qty-btn" id="plus">+</button>
                 </div>
             </div>
-
-            <div class="total">Total: <strong id="totalUSD">0.00</strong> USD</div>
             <div class="pay">You Pay: <strong id="payUSDT">0.00 USDT</strong></div>
 
-            <input type="text" id="wallet" class="input glass" placeholder="Enter your ERC20 wallet address (0x...)" maxlength="42">
+            <input type="text" id="wallet" class="input glass" placeholder="Enter your Polygon wallet address (0x...)" maxlength="42">
 
             <button id="payNow">Proceed to Payment</button>
         </div>
