--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="feature-card">
                     <h3>Multiple Payment Options</h3>
-                    <p>Pay with USDT on ERC20 network for seamless transactions.</p >
+                    <p>Pay with USDT on Polygon network for seamless transactions.</p >
                 </div>
                 <div class="feature-card">
                     <h3>Global Accessibility</h3>
@@ -116,7 +116,7 @@
                 <li><strong>Competitive Rates</strong>: Exclusive discounts not available on major exchanges.</li>
                 <li><strong>24/7 Support</strong>: Dedicated team for any queries or issues.</li>
                 <li><strong>User-Friendly Interface</strong>: Modern design optimized for mobile and desktop.</li>
-                <li><strong>Multiple Chain Support</strong>: ERC20 compatible with plans for more networks.</li>
+                <li><strong>Multiple Chain Support</strong>: Polygon compatible with plans for more networks.</li>
             </ul>
         </section>
 
@@ -149,7 +149,7 @@
             <div class="faq-accordion">
                 <div class="faq-item">
                     <h3>How do I pay?</h3>
-                    <p>Use USDT on ERC20 network. Scan the QR code in the payment page.</p >
+                    <p>Use USDT on Polygon network. Scan the QR code in the payment page.</p >
                 </div>
                 <div class="faq-item">
                     <h3>Is it safe?</h3>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="feature">
                     <h3>Secure Payment</h3>
-                    <p>ERC20 USDT only, no credit cards needed.</p >
+                    <p>Polygon USDT only, no credit cards needed.</p >
                 </div>
             </div>
         </section>
@@ -204,6 +204,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
