--- a/payment.html
+++ b/payment.html
@@ -21,7 +21,7 @@
             <h2>Scan QR Code to Pay</h2>
             <p style="font-size:3.5rem;color:#00ff9d;font-weight:900;margin:2rem 0" id="usdtAmount">0 USDT</p >
             <div id="qrcode"></div>
-            <div class="addr">ERC20 USDT Address:</div>
+            <div class="addr">Polygon USDT Address:</div>
             <div class="addr">0xB8f3Cf7ad23Cd3CaDbD9735AFf958023239c6A063</div>
             <button id="paid">I Have Paid</button>
         </div>
@@ -30,3 +30,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
