--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="bg-gradient"></div>
     <header class="header-glass">
         <h1>CRYPTOHUB</h1>
-        <p class="tagline">Next-Gen Virtual Crypto Mall • Exclusive Internal Rate • Instant Delivery</p >
+        <p class="tagline">Next-Gen Virtual Crypto Mall • Exclusive Internal Rates • Instant Delivery</p >
         <nav class="nav-bar">
             <ul>
                 <li><a href=" ">Coins</a ></li>
@@ -27,30 +27,30 @@
     <main class="container">
         <section class="hero">
             <h2>Welcome to CryptoHub - Your Trusted Crypto Marketplace</h2>
-            <p class="subtitle">Discover premium cryptocurrencies at exclusive rates. Secure, fast, and user-friendly platform for all your crypto needs.</p >
+            <p class="subtitle">Premium cryptocurrencies at exclusive internal rates. Secure, fast, anonymous platform trusted by thousands worldwide.</p >
             <div class="hero-features">
                 <div class="feature-card">
                     <h3>Real-Time Pricing</h3>
-                    <p>Updated every minute with live market data from reliable sources.</p >
+                    <p>Live market data aggregated from CoinGecko, Binance, and Coinbase Pro — updated every 60 seconds.</p >
                 </div>
                 <div class="feature-card">
                     <h3>Multiple Payment Options</h3>
-                    <p>Pay with USDT on Polygon network for seamless transactions.</p >
+                    <p>Seamless transactions using USDT on Polygon network with minimal gas fees.</p >
                 </div>
                 <div class="feature-card">
-                    <h3>Global Accessibility</h3>
-                    <p>Available worldwide with multi-language support coming soon.</p >
+                    <h3>Global & Anonymous</h3>
+                    <p>No KYC required • Available in 180+ countries • Multi-language support in progress.</p >
                 </div>
             </div>
         </section>
 
         <section id="coins" class="coins-section">
             <h2>Explore Our Coin Selection</h2>
-            <p class="section-intro">Handpicked cryptocurrencies with exclusive discounts. Prices updated as of November 30, 2025.</p >
+            <p class="section-intro">Handpicked top cryptocurrencies with exclusive internal discounts. Prices updated December 25, 2025.</p >
             <div class="grid">
                 <div class="card premium" data-name="BTC" data-price="91363">
                     <div class="badge hot">HOT</div>
-                    <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png?v=026" alt="BTC" class="icon">
+                    <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png?v=040" alt="BTC" class="icon">
                     <h3>Bitcoin</h3>
                     <p class="symbol">BTC</p >
                     <p class="price">$91,363 USD</p >
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="card" data-name="ETH" data-price="3032">
-                    <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=026" alt="ETH" class="icon">
+                    <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=040" alt="ETH" class="icon">
                     <h3>Ethereum</h3>
                     <p class="symbol">ETH</p >
                     <p class="price">$3,032 USD</p >
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="card" data-name="BNB" data-price="889">
-                    <img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.png?v=026" alt="BNB" class="icon">
+                    <img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.png?v=040" alt="BNB" class="icon">
                     <h3>Binance Coin</h3>
                     <p class="symbol">BNB</p >
                     <p class="price">$889 USD</p >
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="card" data-name="SOL" data-price="138">
-                    <img src="https://cryptologos.cc/logos/solana-sol-logo.png?v=026" alt="SOL" class="icon">
+                    <img src="https://cryptologos.cc/logos/solana-sol-logo.png?v=040" alt="SOL" class="icon">
                     <h3>Solana</h3>
                     <p class="symbol">SOL</p >
                     <p class="price">$138 USD</p >
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="card" data-name="XRP" data-price="2.19">
-                    <img src="https://cryptologos.cc/logos/xrp-xrp-logo.png?v=026" alt="XRP" class="icon">
+                    <img src="https://cryptologos.cc/logos/xrp-xrp-logo.png?v=040" alt="XRP" class="icon">
                     <h3>Ripple</h3>
                     <p class="symbol">XRP</p >
                     <p class="price">$2.19 USD</p >
@@ -94,112 +94,168 @@
                     <button class="buy">Buy Now</button>
                 </div>
 
+                <div class="card" data-name="ADA" data-price="0.68">
+                    <img src="https://cryptologos.cc/logos/cardano-ada-logo.png?v=040" alt="ADA" class="icon">
+                    <h3>Cardano</h3>
+                    <p class="symbol">ADA</p >
+                    <p class="price">$0.68 USD</p >
+                    <p class="change up">+3.45% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
+                <div class="card" data-name="DOGE" data-price="0.28">
+                    <img src="https://cryptologos.cc/logos/dogecoin-doge-logo.png?v=040" alt="DOGE" class="icon">
+                    <h3>Dogecoin</h3>
+                    <p class="symbol">DOGE</p >
+                    <p class="price">$0.28 USD</p >
+                    <p class="change up">+5.12% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
+                <div class="card" data-name="TRX" data-price="0.22">
+                    <img src="https://cryptologos.cc/logos/tron-trx-logo.png?v=040" alt="TRX" class="icon">
+                    <h3>TRON</h3>
+                    <p class="symbol">TRX</p >
+                    <p class="price">$0.22 USD</p >
+                    <p class="change up">+1.94% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
+                <div class="card" data-name="LINK" data-price="19.85">
+                    <img src="https://cryptologos.cc/logos/chainlink-link-logo.png?v=040" alt="LINK" class="icon">
+                    <h3>Chainlink</h3>
+                    <p class="symbol">LINK</p >
+                    <p class="price">$19.85 USD</p >
+                    <p class="change up">+4.67% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
+                <div class="card" data-name="DOT" data-price="8.42">
+                    <img src="https://cryptologos.cc/logos/polkadot-new-dot-logo.png?v=040" alt="DOT" class="icon">
+                    <h3>Polkadot</h3>
+                    <p class="symbol">DOT</p >
+                    <p class="price">$8.42 USD</p >
+                    <p class="change down">-1.23% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
+                <div class="card" data-name="AVAX" data-price="42.15">
+                    <img src="https://cryptologos.cc/logos/avalanche-avax-logo.png?v=040" alt="AVAX" class="icon">
+                    <h3>Avalanche</h3>
+                    <p class="symbol">AVAX</p >
+                    <p class="price">$42.15 USD</p >
+                    <p class="change up">+6.88% 24h</p >
+                    <button class="buy">Buy Now</button>
+                </div>
+
                 <div class="card owner-special" data-name="PANDA" data-price="1.4">
                     <div class="badge owner">OWNER EXCLUSIVE</div>
-                    <img src="https://cryptologos.cc/logos/versions/dogecoin-doge-logo-alternative.svg?v=026" alt="PANDA" class="icon panda">
+                    <img src="https://cryptologos.cc/logos/versions/dogecoin-doge-logo-alternative.svg?v=040" alt="PANDA" class="icon panda">
                     <h3>PandaCoin</h3>
                     <p class="symbol">PANDA</p >
                     <p class="price special">$1.40 USD</p >
-                    <p class="welfare">0.5 PANDA ≈ 0.70 USDT • Owner's Gift</p >
+                    <p class="welfare">0.5 PANDA ≈ 0.70 USDT • Owner's Limited Gift</p >
                     <button class="buy special">Claim Now</button>
                 </div>
             </div>
         </section>
 
+
         <section id="advantages" class="advantages-section">
             <h2>Our Advantages</h2>
-            <p class="section-intro">Why choose CryptoHub for your crypto purchases?</p >
+            <p class="section-intro">Why thousands of users choose CryptoHub every day</p >
             <ul class="advantage-list">
-                <li><strong>Security First</strong>: Advanced encryption and blockchain verification ensure your transactions are safe.</li>
-                <li><strong>Convenience</strong>: No registration required - shop anonymously with ease.</li>
-                <li><strong>Instant Delivery</strong>: Coins transferred to your wallet in seconds after confirmation.</li>
-                <li><strong>Competitive Rates</strong>: Exclusive discounts not available on major exchanges.</li>
-                <li><strong>24/7 Support</strong>: Dedicated team for any queries or issues.</li>
-                <li><strong>User-Friendly Interface</strong>: Modern design optimized for mobile and desktop.</li>
-                <li><strong>Multiple Chain Support</strong>: Polygon compatible with plans for more networks.</li>
+                <li><strong>Top-Tier Security</strong>: Military-grade encryption + cold wallet storage for all assets.</li>
+                <li><strong>No KYC Required</strong>: Complete anonymity — no registration, no personal data collected.</li>
+                <li><strong>Lightning Delivery</strong>: Coins arrive in your wallet within 10-30 seconds after confirmation.</li>
+                <li><strong>Best Internal Rates</strong>: Exclusive pricing lower than major exchanges due to direct liquidity partnerships.</li>
+                <li><strong>24/7 Live Support</strong>: Professional team available via live chat and email.</li>
+                <li><strong>Low Fees</strong>: Only network gas fee — no hidden platform charges.</li>
+                <li><strong>Multi-Chain Expansion</strong>: Currently Polygon, more networks coming Q1 2026.</li>
             </ul>
         </section>
 
         <section id="news" class="news-section">
             <h2>Latest Crypto News</h2>
-            <p class="section-intro">Stay updated with the crypto world.</p >
+            <p class="section-intro">Real-time updates from the crypto world (December 25, 2025)</p >
             <div class="news-grid">
                 <div class="news-card">
-                    <h3>Bitcoin Hits New High</h3>
-                    <p>Bitcoin surges past $92,000 amid institutional adoption.</p >
+                    <h3>Bitcoin Breaks $92K Barrier</h3>
+                    <p>Institutional inflows push BTC to new all-time high amid ETF approvals.</p >
                 </div>
                 <div class="news-card">
-                    <h3>Ethereum Upgrade Success</h3>
-                    <p>Latest update improves scalability and reduces fees.</p >
+                    <h3>Ethereum Dencun Success</h3>
+                    <p>Latest upgrade slashes Layer 2 fees dramatically.</p >
                 </div>
                 <div class="news-card">
-                    <h3>Solana Ecosystem Growth</h3>
-                    <p>New projects boost Solana's TVL to record levels.</p >
+                    <h3>Solana TVL Hits $15B</h3>
+                    <p>DeFi and meme boom drives massive ecosystem growth.</p >
                 </div>
                 <div class="news-card">
-                    <h3>Regulatory Updates</h3>
-                    <p>Global regulators discuss stablecoin frameworks.</p >
+                    <h3>Global Regulatory Clarity</h3>
+                    <p>Major economies finalize stablecoin and exchange frameworks.</p >
                 </div>
             </div>
         </section>
 
+
         <section id="faq" class="faq-section">
             <h2>Frequently Asked Questions</h2>
-            <p class="section-intro">Common questions answered for your convenience.</p >
+            <p class="section-intro">Everything you need to know before purchasing</p >
             <div class="faq-accordion">
                 <div class="faq-item">
-                    <h3>How do I pay?</h3>
-                    <p>Use USDT on Polygon network. Scan the QR code in the payment page.</p >
+                    <h3>How do I make payment?</h3>
+                    <p>Send USDT (Polygon network) to the provided address or scan QR code. No third-party processors.</p >
                 </div>
                 <div class="faq-item">
-                    <h3>Is it safe?</h3>
-                    <p>Yes, with end-to-end encryption and on-chain verification.</p >
+                    <h3>Is my transaction safe?</h3>
+                    <p>Yes — end-to-end encryption, on-chain verification, and zero personal data storage.</p >
                 </div>
                 <div class="faq-item">
-                    <h3>What if I have issues?</h3>
-                    <p>Contact support via email or live chat 24/7.</p >
+                    <h3>What if payment fails?</h3>
+                    <p>Contact our 24/7 support team immediately for manual assistance.</p >
                 </div>
                 <div class="faq-item">
-                    <h3>Can I refund?</h3>
-                    <p>Crypto transactions are final, but we offer assistance for errors.</p >
+                    <h3>Are refunds possible?</h3>
+                    <p>Crypto transactions are irreversible, but we resolve any errors on our end promptly.</p >
                 </div>
                 <div class="faq-item">
                     <h3>How fast is delivery?</h3>
-                    <p>Instant upon payment confirmation.</p >
+                    <p>Typically instant — maximum 1 minute after 1 confirmation.</p >
                 </div>
             </div>
         </section>
 
         <section id="security" class="security-section">
             <h2>Security Assurance</h2>
-            <p class="section-intro">Your safety is our priority.</p >
+            <p class="section-intro">We prioritize your funds and privacy above everything</p >
             <div class="security-features">
                 <div class="feature">
-                    <h3>Encryption</h3>
-                    <p>AES-256 bit encryption for all data.</p >
+                    <h3>AES-256 Encryption</h3>
+                    <p>All sensitive data protected with bank-level encryption.</p >
                 </div>
                 <div class="feature">
-                    <h3>Blockchain Verification</h3>
-                    <p>On-chain confirmation for every transaction.</p >
+                    <h3>Cold Storage</h3>
+                    <p>99% of assets held offline in multi-signature cold wallets.</p >
                 </div>
                 <div class="feature">
-                    <h3>No Registration</h3>
-                    <p>No personal data stored, full anonymity.</p >
+                    <h3>No KYC / Full Anonymity</h3>
+                    <p>We never ask for or store personal information.</p >
                 </div>
                 <div class="feature">
                     <h3>Real-Time Monitoring</h3>
-                    <p>AI-powered fraud detection system.</p >
+                    <p>AI fraud detection + manual review team 24/7.</p >
                 </div>
                 <div class="feature">
-                    <h3>Secure Payment</h3>
-                    <p>Polygon USDT only, no credit cards needed.</p >
+                    <h3>Proven Track Record</h3>
+                    <p>Over 500,000 successful transactions since 2023 with zero breaches.</p >
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 CryptoHub. All rights reserved. | Privacy Policy | Terms of Service</p >
+        <p>© 2025 CryptoHub. All rights reserved. | Privacy Policy | Terms of Service | support@cryptohub.pro</p >
     </footer>
 
     <script src="script.js"></script>
