--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
     </main>
 
     <footer class="footer">
-        <p>© 2025 CryptoHub. All rights reserved. | Privacy Policy | Terms of Service | support@cryptohub.pro</p >
-    </footer>
+        <p>© 2025 CryptoHub. All rights reserved. | Privacy Policy | Terms of Service | support@cryptohubs.online
 
     <script src="script.js"></script>
 </body>
 </html>
+
